# example-fastapi-poetry-uvicorn-gunicorn

./: README.md  pyproject.toml
myapp/server/: gunicorn.py  main.py  uvicorn.py
